[gd_scene load_steps=6 format=3 uid="uid://c5kgvwl2snpc8"]

[ext_resource type="Script" path="res://material_maker/panels/hierarchy/hierarchy_panel.gd" id="1"]
[ext_resource type="Texture2D" uid="uid://c0j4px4n72di5" path="res://material_maker/icons/icons.tres" id="2"]

[sub_resource type="AtlasTexture" id="1"]
atlas = ExtResource("2")
region = Rect2(32, 48, 16, 16)

[sub_resource type="AtlasTexture" id="2"]
atlas = ExtResource("2")
region = Rect2(16, 48, 16, 16)

[sub_resource type="AtlasTexture" id="3"]
atlas = ExtResource("2")
region = Rect2(0, 32, 16, 16)

[node name="Hierarchy" type="PanelContainer"]
offset_top = 182.0
offset_right = 200.0
offset_bottom = 182.0
theme_type_variation = &"MM_PanelBackground"
script = ExtResource("1")

[node name="Hierarchy" type="VBoxContainer" parent="."]
layout_mode = 2

[node name="HBoxContainer" type="HBoxContainer" parent="Hierarchy"]
layout_mode = 2

[node name="Expand" type="Button" parent="Hierarchy/HBoxContainer"]
layout_mode = 2
tooltip_text = "Expand all"
icon = SubResource("1")

[node name="Collapse" type="Button" parent="Hierarchy/HBoxContainer"]
layout_mode = 2
tooltip_text = "Collapse all"
icon = SubResource("2")

[node name="Space" type="Control" parent="Hierarchy/HBoxContainer"]
custom_minimum_size = Vector2(10, 0)
layout_mode = 2

[node name="PreviewMenu" type="MenuButton" parent="Hierarchy/HBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
icon = SubResource("3")

[node name="Tree" type="Tree" parent="Hierarchy"]
unique_name_in_owner = true
custom_minimum_size = Vector2(200, 150)
layout_mode = 2
size_flags_vertical = 3
allow_reselect = true

[node name="Delay" type="Timer" parent="."]
wait_time = 0.5
one_shot = true

[connection signal="pressed" from="Hierarchy/HBoxContainer/Expand" to="." method="_on_Expand_pressed"]
[connection signal="pressed" from="Hierarchy/HBoxContainer/Collapse" to="." method="_on_Collapse_pressed"]
[connection signal="item_activated" from="Hierarchy/Tree" to="." method="_on_Hierarchy_item_double_clicked"]
[connection signal="item_icon_double_clicked" from="Hierarchy/Tree" to="." method="_on_Hierarchy_item_double_clicked"]
[connection signal="timeout" from="Delay" to="Hierarchy" method="_on_Delay_timeout"]
